--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make an awesome ...</h1>
+            <h1>How to make a good instagram caption</h1>
 
             <hr>
             <p><b>Assembly time:</b> 30 minutes<br>
-              <b>Awesome rating:</b> 10% awesome</p>
+              <b>Effectivness rating:</b> 100% effective</p>
             <hr>
 
             <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
@@ -95,11 +95,11 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
+              <li>Phone</li>
+              <li>Instagram Account </li>
+              <li>Cool Photo</li>
+              <li>Creativity</li>
+              <li>Camera</li>
               <li>Water</li>
             </ul>
           </aside>
@@ -116,8 +116,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Capture a new post image or upload your photo or video from your camera. </h3>
+              <p>Tap the plus (+) at the bottom of your screen to create an Instagram post. You can either use the camera and filters built-in with Instagram or you can upload your own video or photo.</p> 
             </div>
           </li>
 
