--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Tap Next. </h3>
+              <p>You'll see this in the top right corner of your screen.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -140,8 +140,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Select a filter or edit your media. </h3>
+              <p>You can tap through the offered filters to see what your photo/video will look like as a final result. You can also tap the Edit tab at the bottom of your screen to make other adjustments to your media.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
