--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tap Next. </h3>
+              <h3>Tap Next to continue.</h3>
               <p>You'll see this in the top right corner of your screen.</p>
 
               <!--
