--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
               <b>Effectivness rating:</b> 100% effective</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>How to Make a Cool Instagram Caption</p>
 
           </div>
 
