--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <p class="caption"></p>
             </div>
           </li>
 
@@ -152,16 +152,17 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Tap in the text field that says "Write a caption."</h3>
+              <p>The keyboard will activate and slide up from the bottom of your screen.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Type your caption.</h3>
+              <p>Some users have found that lengthy, micro-blogging-type captions do well to reach your audience and build brand loyalty.[2] However, if you create lengthy captions, be sure you're using line breaks to break up the wall of text you're writing. It's easier to read and understand that way.
+A good Instagram post caption will also include a call to action (CTA), like visiting a website, or asking a question. You can make it engaging by asking those who agree to double-tap (like) or leave comments on the post. If you want to boost your chances of getting on the Instagram Algorithm, you can also ask your audience to tag a friend in the comments.</p> 
             </div>
           </li>
 
