--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+              <a href="//imgur.com/a/pgp5Q8q">Improved but still work-in-progress of my iPhone advertisement animation mock-up - (This is not a real advertisement and I&#39;m not affiliated with Apple - This is just for practice)</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
               <p class="caption"></p>
             </div>
           </li>
