--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="//imgur.com/a/pgp5Q8q">Improved but still work-in-progress of my iPhone advertisement animation mock-up - (This is not a real advertisement and I&#39;m not affiliated with Apple - This is just for practice)</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+              <a href="//imgur.com/R9Rq8OK">The Keys to My Heart</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
               <p class="caption"></p>
             </div>
           </li>
